<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item
        android:id="@+id/action_refresh"
        android:orderInCategory="1"
        android:title="REFRESH"
        app:showAsAction="ifRoom" />

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/sort_by_popular"
            android:orderInCategory="1"
            android:title="@string/popular"
            app:showAsAction="never" />
        <item
            android:id="@+id/sort_by_top_rated"
            android:orderInCategory="2"
            android:title="@string/top_rated"
            app:showAsAction="never" />
        <item
            android:id="@+id/my_favourites"
            android:orderInCategory="3"
            android:title="@string/my_favourites"
            app:showAsAction="never" />

    </group>


    <!--app:showAsAction= "never": shows 3 dots, "ifRoom": shows title if there is room-->
</menu>