<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="reviewListForReviewAdapter"
            type="com.example.android.popularmovies.utilities.ReviewAdapter" />
    </data>

    <LinearLayout xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            card_view:cardCornerRadius="8dp"
            card_view:cardElevation="8dp"
            card_view:cardUseCompatPadding="true"
            card_view:contentPadding="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:animateLayoutChanges="true"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_review_content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="5"
                    android:minLines="5"
                    android:text="@string/example_review"
                    android:textStyle="italic" />

                <TextView
                    android:id="@+id/tv_author_review"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:text="@string/author"
                    android:textStyle="italic" />

                <TextView
                    android:id="@+id/tv_read_more_review"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/read_more"
                    android:textColor="@color/read_more_review"
                    android:visibility="visible" />

            </LinearLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>
</layout>